objects/VisitOps__Location__c.object
<CustomObject>
    <fields>
        <fullName>VisitOps__Hide_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Language__c</fullName>
        <inlineHelpText>Multi-Language options for user to view their Survey</inlineHelpText>
        <label>Survey Language (Deprecated)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>zh_CN</fullName>
                    <label>Chinese (Simplified)</label>
                </value>
                <value>
                    <fullName>en_US</fullName>
                    <label>English</label>
                </value>
                <value>
                    <fullName>fr</fullName>
                    <label>French</label>
                </value>
                <value>
                    <fullName>de_DE</fullName>
                    <label>German</label>
                </value>
                <value>
                    <fullName>ja</fullName>
                    <label>Japanese</label>
                </value>
                <value>
                    <fullName>pl</fullName>
                    <label>Polish</label>
                </value>
                <value>
                    <fullName>pt_BR</fullName>
                    <label>Portuguese</label>
                </value>
                <value>
                    <fullName>es</fullName>
                    <label>Spanish</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__LocationCity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Location City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__LocationCountry__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Location Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__LocationPostalCodeOrZip__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Location Postal Code/Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__LocationStateOrProvince__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Location State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Location_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Location Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Location_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Location Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VisitOps__Location_Street_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Location Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Location_Type__c</fullName>
        <label>Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Showroom</fullName>
                </value>
                <value>
                    <fullName>Regional Showroom</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Map_to_Location__c</fullName>
        <description>This field is no longer used because Managed Package doesn&apos;t allow changing datatypes and this field will create conflicts while deploying in Managed Package.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Map to Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__MaptoLocation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Map to Location</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>VisitOps__Primary_Contact_Email__c</fullName>
        <formula>VisitOps__Primary_Contact_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Primary_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Primary_Contact_Phone__c</fullName>
        <formula>VisitOps__Primary_Contact_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Secondary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Locations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Standard_Business_Hours__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Standard Business Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Street_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Survey_Language__c</fullName>
        <label>Survey Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>VisitOps__Survey_Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__TimeZoneIdentifierFormula__c</fullName>
        <description>This field contains Time zone identifier(Eg: America/Panama) which is unique and determines the correct time in that location irrespective of Daylights</description>
        <formula>SUBSTITUTE(RIGHT(TEXT( VisitOps__Time_Zone__c ), LEN(TEXT( VisitOps__Time_Zone__c )) - FIND(&quot;(&quot;, TEXT( VisitOps__Time_Zone__c ), 2)),
&quot;)&quot;,&quot;&quot;)</formula>
        <inlineHelpText>This field is used to automatically adjust times in VisitOps (e.g. Visits, Calendars, Agendas) during global time changes (e.g. Daylight Savings Time).</inlineHelpText>
        <label>Time Zone Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Time_Zone__c</fullName>
        <inlineHelpText>This field is static and will not automatically change based on global time changes (e.g. Daylight Savings Time). VisitOps uses the Time Zone Identifier field below to automatically adjust times.</inlineHelpText>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>(GMT+00:00) Greenwich Mean Time (Europe/Dublin)</fullName>
                </value>
                <value>
                    <fullName>(GMT+00:00) Greenwich Mean Time (Europe/London)</fullName>
                </value>
                <value>
                    <fullName>(GMT+00:00) Greenwich Mean Time (GMT)</fullName>
                </value>
                <value>
                    <fullName>(GMT+00:00) Western European Time (Africa/Casablanca)</fullName>
                </value>
                <value>
                    <fullName>(GMT+00:00) Western European Time (Europe/Lisbon)</fullName>
                </value>
                <value>
                    <fullName>(GMT+01:00) Central European Time (Africa/Algiers)</fullName>
                </value>
                <value>
                    <fullName>(GMT+01:00) Central European Time (Europe/Amsterdam)</fullName>
                </value>
                <value>
                    <fullName>(GMT+01:00) Central European Time (Europe/Berlin)</fullName>
                </value>
                <value>
                    <fullName>(GMT+01:00) Central European Time (Europe/Brussels)</fullName>
                </value>
                <value>
                    <fullName>(GMT+01:00) Central European Time (Europe/Paris)</fullName>
                </value>
                <value>
                    <fullName>(GMT+01:00) Central European Time (Europe/Prague)</fullName>
                </value>
                <value>
                    <fullName>(GMT+01:00) Central European Time (Europe/Rome)</fullName>
                </value>
                <value>
                    <fullName>(GMT+01:00) Irish Summer Time (Europe/Dublin)</fullName>
                </value>
                <value>
                    <fullName>(GMT+02:00) Eastern European Time (Africa/Cairo)</fullName>
                </value>
                <value>
                    <fullName>(GMT+02:00) Eastern European Time (Asia/Beirut)</fullName>
                </value>
                <value>
                    <fullName>(GMT+02:00) Eastern European Time (Europe/Athens)</fullName>
                </value>
                <value>
                    <fullName>(GMT+02:00) Eastern European Time (Europe/Bucharest)</fullName>
                </value>
                <value>
                    <fullName>(GMT+02:00) Eastern European Time (Europe/Helsinki)</fullName>
                </value>
                <value>
                    <fullName>(GMT+02:00) South Africa Standard Time (Africa/Johannesburg)</fullName>
                </value>
                <value>
                    <fullName>(GMT+03:00) Arabian Standard Time (Asia/Baghdad)</fullName>
                </value>
                <value>
                    <fullName>(GMT+03:00) Arabian Standard Time (Asia/Kuwait)</fullName>
                </value>
                <value>
                    <fullName>(GMT+03:00) Arabian Standard Time (Asia/Riyadh)</fullName>
                </value>
                <value>
                    <fullName>(GMT+03:00) East Africa Time (Africa/Nairobi)</fullName>
                </value>
                <value>
                    <fullName>(GMT+03:00) Eastern European Summer Time (Asia/Beirut)</fullName>
                </value>
                <value>
                    <fullName>(GMT+03:00) Eastern European Summer Time (Europe/Athens)</fullName>
                </value>
                <value>
                    <fullName>(GMT+03:00) Eastern European Summer Time (Europe/Bucharest)</fullName>
                </value>
                <value>
                    <fullName>(GMT+03:00) Eastern European Summer Time (Europe/Helsinki)</fullName>
                </value>
                <value>
                    <fullName>(GMT+03:00) Eastern European Summer Time (Europe/Istanbul)</fullName>
                </value>
                <value>
                    <fullName>(GMT+03:00) Eastern European Time (Europe/Istanbul)</fullName>
                </value>
                <value>
                    <fullName>(GMT+03:00) Further-eastern European Time (Europe/Minsk)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Location</label>
    <listViews>
        <fullName>VisitOps__All</fullName>
        <columns>NAME</columns>
        <columns>VisitOps__LocationCity__c</columns>
        <columns>VisitOps__LocationStateOrProvince__c</columns>
        <columns>VisitOps__LocationCountry__c</columns>
        <columns>VisitOps__Time_Zone__c</columns>
        <columns>VisitOps__Primary_Contact_Name__c</columns>
        <columns>VisitOps__Primary_Contact_Email__c</columns>
        <columns>VisitOps__Primary_Contact_Phone__c</columns>
        <columns>VisitOps__Location_Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VisitOps__TimeZone_Required</fullName>
        <active>true</active>
        <description>Time zone is mandatory for a Location.</description>
        <errorConditionFormula>ISBLANK(TEXT(VisitOps__Time_Zone__c))</errorConditionFormula>
        <errorMessage>Time zone is mandatory for a Location.</errorMessage>
    </validationRules>
</CustomObject>